--- a/view/frontend/web/template/payment/buckaroo_magento2_afterpay20.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_afterpay20.html
@@ -2,19 +2,19 @@
     <div class="payment-method-title field choice bk-payment">
         <div class="bk-payment-wrap">
             <div class="bk-radio-wrap">
-                <input type="radio"
+                <input class="radio"
+                       data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()"
                        name="payment[method]"
-                       class="radio"
-                       data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()"/>
-                <label class="label" data-bind="attr: {'for': getCode()}" >
-                        <!-- ko text: getTitle() --><!-- /ko -->
-                        <!-- ko if: subtext !== null && subtext.length > 0 -->
-                       <p class="bk-description" data-bind="text: subtext, style: subTextStyle"></p>
-                        <!-- /ko -->
+                       type="radio">
+                <label class="label" data-bind="attr: {'for': getCode()}">
+                    <!-- ko text: getTitle() --><!-- /ko -->
+                    <!-- ko if: subtext !== null && subtext.length > 0 -->
+                    <p class="bk-description" data-bind="text: subtext, style: subTextStyle"></p>
+                    <!-- /ko -->
                 </label>
             </div>
             <div class="bk-img-wrap">
-                <img data-bind="attr: { src: require.toUrl('Buckaroo_Magento2/images/svg/riverty.svg') }" />
+                <img data-bind="attr: { src: require.toUrl('Buckaroo_Magento2/images/svg/riverty.svg') }">
             </div>
         </div>
     </div>
@@ -34,61 +34,61 @@
 
                     <!-- ko if: showIdentification -->
                     <div class="field required">
-                        <legend class="label"> <span data-bind="i18n: 'Identification number:'"> </span> </legend>
+                        <legend class="label"><span data-bind="i18n: 'Identification number:'"> </span></legend>
                         <div class="control">
-                            <input id="buckaroo_magento2_afterpay20_Identificationnumber"
-                                   class="input-text field"
-                                   type="text"
-                                   name="payment[buckaroo_magento2_afterpay20][buckaroo_identification_number]"
+                            <input class="input-text field"
                                    data-bind="
                                    attr: { 'data-validate': JSON.stringify({ 'required': true }) },
                                    valueUpdate: 'blur',
                                    value: identificationValidate
-                                   ">
+                                   "
+                                   id="buckaroo_magento2_afterpay20_Identificationnumber"
+                                   name="payment[buckaroo_magento2_afterpay20][buckaroo_identification_number]"
+                                   type="text">
                         </div>
                     </div>
                     <!-- /ko -->
 
-                     <!-- ko if: showCOC -->
-                     <div class="field required">
-                        <legend class="label"> <span data-bind="i18n: 'COC Number:'"> </span> </legend>
+                    <!-- ko if: showCOC -->
+                    <div class="field required">
+                        <legend class="label"><span data-bind="i18n: 'COC Number:'"> </span></legend>
                         <div class="control">
-                            <input id="buckaroo_magento2_afterpay20_coc"
-                                   class="input-text field"
-                                   type="text"
-                                   name="payment[buckaroo_magento2_afterpay20][customer_coc]"
-                                   maxlength="8"
+                            <input class="input-text field"
                                    data-bind="
                                    attr: { 'data-validate': JSON.stringify({ 'required': true, 'validateCOC': true }) },
                                    valueUpdate: 'blur',
                                    value: customerCoc
-                                   ">
+                                   "
+                                   id="buckaroo_magento2_afterpay20_coc"
+                                   maxlength="8"
+                                   name="payment[buckaroo_magento2_afterpay20][customer_coc]"
+                                   type="text">
                         </div>
                     </div>
                     <!-- /ko -->
                     <!-- ko if: showPhone -->
-                    <div class="field required" >
-                        <label class="label" for="buckaroo_magento2_afterpay20_Telephone"> <span data-bind="i18n: 'Telephone:'"> </span> </label>
+                    <div class="field required">
+                        <label class="label" for="buckaroo_magento2_afterpay20_Telephone"> <span
+                            data-bind="i18n: 'Telephone:'"> </span> </label>
                         <div class="control">
-                            <input id="buckaroo_magento2_afterpay20_Telephone"
-                                   type="text"
-                                   class="input-text field"
+                            <input class="input-text field"
                                    data-bind="
                                    attr: { 'data-validate': JSON.stringify({ 'phoneValidation': true, 'required': true }) },
                                    valueUpdate: 'blur',
                                    value: phone"
-                                   name="payment[buckaroo_magento2_afterpay20][customer_telephone]">
+                                   id="buckaroo_magento2_afterpay20_Telephone"
+                                   name="payment[buckaroo_magento2_afterpay20][customer_telephone]"
+                                   type="text">
                         </div>
                     </div>
                     <!-- /ko -->
 
                     <!-- ko if: showNLBEFields -->
                     <div class="field required">
-                        <label class="label" for="buckaroo_magento2_afterpay20_DoB"> <span data-bind="i18n: 'Date of Birth:'"> </span> </label>
+                        <label class="label" for="buckaroo_magento2_afterpay20_DoB"> <span
+                            data-bind="i18n: 'Date of Birth:'"> </span> </label>
                         <div class="control addon">
-                            <input id="buckaroo_magento2_afterpay20_DoB"
-                                   class="field"
-                                   type="text"
+                            <input class="field"
                                    data-bind="
                                    datepicker: {
                                         storage: dateValidate,
@@ -107,7 +107,9 @@
                                     'data-validate': JSON.stringify({ 'required': true, 'validate-date-au': true, 'validateAge': true }),
                                     placeholder: $t('DD/MM/YYYY')
                                    }"
-                                   name="payment[buckaroo_magento2_afterpay20][customer_DoB]">
+                                   id="buckaroo_magento2_afterpay20_DoB"
+                                   name="payment[buckaroo_magento2_afterpay20][customer_DoB]"
+                                   type="text">
 
                         </div>
                     </div>
@@ -115,36 +117,41 @@
 
                     <!-- Default -->
                     <div class="field required">
-                        <label class="label" for="buckaroo_magento2_afterpay20_TermsCondition"> <span data-bind="i18n: 'Terms and Conditions:'"> </span> </label>
+                        <label class="label" for="buckaroo_magento2_afterpay20_TermsCondition"> <span
+                            data-bind="i18n: 'Terms and Conditions:'"> </span> </label>
                         <div class="control">
-                            <input id="buckaroo_magento2_afterpay20_TermsCondition"
-                                   class="field"
-                                   type="checkbox"
+                            <input class="field"
                                    data-bind="
                                    checked: termsValidate,
                                    attr: { 'data-validate': JSON.stringify({ 'required': true})}"
-                                   name="payment[buckaroo_magento2_afterpay20][termsCondition]">
+                                   id="buckaroo_magento2_afterpay20_TermsCondition"
+                                   name="payment[buckaroo_magento2_afterpay20][termsCondition]"
+                                   type="checkbox">
                             <span>
-                                <a target="_blank"
-                                 rel="noopener"
-                                   data-bind="
+                                <a data-bind="
                                        i18n: 'The general Terms and Conditions for the Riverty payment method apply. The privacy policy of Riverty can be found here.',
                                        attr: { 'href': termsUrl }
-                                   ">
+                                   "
+                                   rel="noopener"
+                                   target="_blank">
                                 </a>
                                 <!-- ko if: showFrenchTos -->
                                 <span data-bind="html: getFrenchTos()"></span>
                                 <!-- /ko -->
                             </span>
-                            <div for="buckaroo_magento2_afterpay20_TermsCondition" generated="true" class="mage-error" id="buckaroo_magento2_afterpay20_TermsCondition-error" style="display: none;"><span data-bind="i18n: 'This is a required field.' "></span></div>
+                            <div class="mage-error" for="buckaroo_magento2_afterpay20_TermsCondition" generated="true"
+                                 id="buckaroo_magento2_afterpay20_TermsCondition-error" style="display: none;"><span
+                                data-bind="i18n: 'This is a required field.' "></span></div>
                         </div>
                     </div>
 
                     <!-- ko if: showFinancialWarning  -->
-                    <span data-bind="i18n: `Je moet minimaal 18+ zijn om deze dienst te gebruiken. Als je op tijd betaalt, voorkom je extra kosten en zorg je dat je in de toekomst nogmaals gebruik kunt maken van de diensten van ${getTitle()}. Door verder te gaan, accepteer je de Algemene Voorwaarden en bevestig je dat je de Privacyverklaring en Cookieverklaring hebt gelezen.`">  </span>
+                    <span
+                        data-bind="i18n: `Je moet minimaal 18+ zijn om deze dienst te gebruiken. Als je op tijd betaalt, voorkom je extra kosten en zorg je dat je in de toekomst nogmaals gebruik kunt maken van de diensten van ${getTitle()}. Door verder te gaan, accepteer je de Algemene Voorwaarden en bevestig je dat je de Privacyverklaring en Cookieverklaring hebt gelezen.`">  </span>
                     <!-- /ko -->
                     <div class="field">
-                        <span data-bind="i18n: 'Please make sure all fields are filled in correctly before proceeding.' ">  </span>
+                        <span
+                            data-bind="i18n: 'Please make sure all fields are filled in correctly before proceeding.' ">  </span>
                     </div>
                 </fieldset>
             </form>
@@ -152,16 +159,16 @@
 
         <div class="actions-toolbar">
             <div class="primary">
-                <button id="button-action-checkout-afterpay20"
-                        class="action primary checkout"
-                        type="submit"
+                <button class="action primary checkout"
                         data-bind="
                         click: placeOrder,
                         attr: {title: $t('Place Order')},
                         enable: (getCode() == isChecked()),
                         css: {disabled: !isPlaceOrderActionAllowed() || !buttoncheck() }
                         "
-                        disabled>
+                        disabled
+                        id="button-action-checkout-afterpay20"
+                        type="submit">
                     <span data-bind="i18n: 'Place Order'"></span>
                 </button>
             </div>
