--- a/view/frontend/web/template/payment/buckaroo_magento2_applepay_redirect.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_applepay_redirect.html
@@ -20,11 +20,11 @@
     <div class="payment-method-title field choice bk-payment">
         <div class="bk-payment-wrap">
             <div class="bk-radio-wrap">
-                <input type="radio"
+                <input class="radio"
+                       data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()"
                        name="payment[method]"
-                       class="radio"
-                       data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()"/>
-                <label class="label" data-bind="attr: {'for': getCode()}" >
+                       type="radio">
+                <label class="label" data-bind="attr: {'for': getCode()}">
                     <!-- ko text: getTitle() --><!-- /ko -->
                     <!-- ko if: subtext !== null && subtext.length > 0 -->
                     <p class="bk-description" data-bind="text: subtext, style: subTextStyle"></p>
@@ -32,7 +32,8 @@
                 </label>
             </div>
             <div class="bk-img-wrap">
-                <img data-bind="attr: { src: require.toUrl('Buckaroo_Magento2/images/svg/'+getCode().replace('buckaroo_magento2_','')+'.svg') }" />
+                <img
+                    data-bind="attr: { src: require.toUrl('Buckaroo_Magento2/images/svg/'+getCode().replace('buckaroo_magento2_','')+'.svg') }">
             </div>
         </div>
     </div>
@@ -56,16 +57,16 @@
 
         <div class="actions-toolbar">
             <div class="primary">
-                <button id="button-action-checkout-apple-pay"
-                        class="action primary checkout"
-                        type="submit"
+                <button class="action primary checkout"
                         data-bind="
                         click: placeOrder,
                         attr: {title: $t('Place Order')},
                         enable: (getCode() == isChecked()),
                         css: {disabled: !isPlaceOrderActionAllowed() }
                         "
-                        disabled>
+                        disabled
+                        id="button-action-checkout-apple-pay"
+                        type="submit">
                     <span data-bind="i18n: 'Place Order'"></span>
                 </button>
             </div>
