--- a/view/frontend/web/template/payment/buckaroo_magento2_billink.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_billink.html
@@ -2,10 +2,10 @@
     <div class="payment-method-title field choice bk-payment">
         <div class="bk-payment-wrap">
             <div class="bk-radio-wrap">
-                <input type="radio"
+                <input class="radio"
+                       data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()"
                        name="payment[method]"
-                       class="radio"
-                       data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()"/>
+                       type="radio">
                 <label class="label" data-bind="attr: {'for': getCode()}">
                     <!-- ko text: getTitle() --><!-- /ko -->
                     <!-- ko if: subtext !== null && subtext.length > 0 -->
@@ -14,7 +14,8 @@
                 </label>
             </div>
             <div class="bk-img-wrap">
-                <img data-bind="attr: { src: require.toUrl('Buckaroo_Magento2/images/svg/'+getCode().replace('buckaroo_magento2_','')+'.svg') }" />
+                <img
+                    data-bind="attr: { src: require.toUrl('Buckaroo_Magento2/images/svg/'+getCode().replace('buckaroo_magento2_','')+'.svg') }">
             </div>
         </div>
     </div>
@@ -34,15 +35,17 @@
 
                     <!-- ko if: !isB2B() -->
                     <div class="field required">
-                        <label class="label" for="buckaroo_magento2_bilink_genderSelect"> <span data-bind="i18n: 'Salutation:'"> </span> </label>
+                        <label class="label" for="buckaroo_magento2_bilink_genderSelect"> <span
+                            data-bind="i18n: 'Salutation:'"> </span> </label>
                         <div class="control">
-                            <select id="buckaroo_magento2_bilink_genderSelect" name="payment[buckaroo_magento2_bilink][customer_gender]" class="select"
+                            <select class="select"
                                     data-bind="options: genderList,
                             optionsText: $t('genderTitle'),
                             optionsValue: 'genderType',
                             optionsCaption: $t('-- Please Select Your Gender--'),
                             value: selectedGender, attr: { 'data-validate': JSON.stringify({ 'required': true })},
-                            event: { blur: validateField }">
+                            event: { blur: validateField }" id="buckaroo_magento2_bilink_genderSelect"
+                                    name="payment[buckaroo_magento2_bilink][customer_gender]">
                             </select>
                         </div>
                     </div>
@@ -64,29 +67,29 @@
                     </div> -->
 
                     <!-- ko if: showPhone() -->
-                    <div class="field required" >
-                        <label class="label" for="buckaroo_magento2_billink_Telephone"> <span data-bind="i18n: 'Telephone:'"> </span> </label>
+                    <div class="field required">
+                        <label class="label" for="buckaroo_magento2_billink_Telephone"> <span
+                            data-bind="i18n: 'Telephone:'"> </span> </label>
                         <div class="control">
-                            <input id="buckaroo_magento2_billink_Telephone"
-                                   type="text"
-                                   class="input-text field"
+                            <input class="input-text field"
                                    data-bind="
                                    attr: { 'data-validate': JSON.stringify({ 'required': true, phoneValidation: true }) },
                                    valueUpdate: 'blur',
                                    value: phone,
                                    event: { blur: validateField }"
-                                   name="payment[buckaroo_magento2_billink][customer_telephone]">
+                                   id="buckaroo_magento2_billink_Telephone"
+                                   name="payment[buckaroo_magento2_billink][customer_telephone]"
+                                   type="text">
                         </div>
                     </div>
                     <!-- /ko -->
 
                     <!-- ko if: !isB2B() -->
                     <div class="field required">
-                        <label class="label" for="buckaroo_magento2_billink_DoB"> <span data-bind="i18n: 'Date of Birth:'"> </span> </label>
+                        <label class="label" for="buckaroo_magento2_billink_DoB"> <span
+                            data-bind="i18n: 'Date of Birth:'"> </span> </label>
                         <div class="control addon">
-                            <input id="buckaroo_magento2_billink_DoB"
-                                   class="field"
-                                   type="text"
+                            <input class="field"
                                    data-bind="
                                    datepicker: {
                                         storage: dob,
@@ -105,73 +108,80 @@
                                     'data-validate': JSON.stringify({ 'required': true, 'validate-date-au': true, validateAge: true }),
                                     placeholder: $t('DD/MM/YYYY')
                                    }"
-                                   name="payment[buckaroo_magento2_billink][customer_DoB]">
+                                   id="buckaroo_magento2_billink_DoB"
+                                   name="payment[buckaroo_magento2_billink][customer_DoB]"
+                                   type="text">
                         </div>
                     </div>
                     <!-- /ko -->
 
                     <!-- ko if: isB2B() -->
                     <div class="field required">
-                        <legend class="label"> <span data-bind="i18n: 'Chamber of Commerce number:'"> </span> </legend>
+                        <legend class="label"><span data-bind="i18n: 'Chamber of Commerce number:'"> </span></legend>
                         <div class="control">
-                            <input id="buckaroo_magento2_billink_chamberOfCommerce"
-                                   class="input-text field"
-                                   type="text"
-                                   name="payment[buckaroo_magento2_billink][buckaroo_chamberOfCommerce]"
+                            <input class="input-text field"
                                    data-bind="
                                    attr: { 'data-validate': JSON.stringify({ 'required': true }) },
                                    valueUpdate: 'blur',
                                    value: cocNumber,
                                    event: { blur: validateField }
-                                   ">
+                                   "
+                                   id="buckaroo_magento2_billink_chamberOfCommerce"
+                                   name="payment[buckaroo_magento2_billink][buckaroo_chamberOfCommerce]"
+                                   type="text">
                         </div>
                     </div>
 
                     <div class="field">
-                        <legend class="label"> <span data-bind="i18n: 'VAT number:'"> </span> </legend>
+                        <legend class="label"><span data-bind="i18n: 'VAT number:'"> </span></legend>
                         <div class="control">
-                            <input id="buckaroo_magento2_billink_VATNumber"
-                                   class="input-text field"
-                                   type="text"
-                                   name="payment[buckaroo_magento2_billink][buckaroo_VATNumber]"
+                            <input class="input-text field"
                                    data-bind="
                                    valueUpdate: 'blur',
                                    value: vatNumber
-                                   ">
+                                   "
+                                   id="buckaroo_magento2_billink_VATNumber"
+                                   name="payment[buckaroo_magento2_billink][buckaroo_VATNumber]"
+                                   type="text">
                         </div>
                     </div>
                     <!-- /ko -->
 
                     <!-- Default -->
                     <div class="field required">
-                        <label class="label" for="buckaroo_magento2_billink_TermsCondition"> <span data-bind="i18n: 'Terms and Conditions:'"> </span> </label>
+                        <label class="label" for="buckaroo_magento2_billink_TermsCondition"> <span
+                            data-bind="i18n: 'Terms and Conditions:'"> </span> </label>
                         <div class="control">
-                            <input id="buckaroo_magento2_billink_TermsCondition"
-                                   class="field"
-                                   type="checkbox"
+                            <input class="field"
                                    data-bind="
                                    checked: tos,
                                    attr: { 'data-validate': JSON.stringify({ 'required': true})},
                                    event: { change: validateField }"
-                                   name="payment[buckaroo_magento2_billink][termsCondition]">
+                                   id="buckaroo_magento2_billink_TermsCondition"
+                                   name="payment[buckaroo_magento2_billink][termsCondition]"
+                                   type="checkbox">
                             <span>
-                                <a target="_blank"
-                                   data-bind="
+                                <a data-bind="
                                        i18n: 'Accept terms of use',
                                        attr: { 'href': 'https://www.billink.nl/app/uploads/2021/05/Gebruikersvoorwaarden-Billink_V11052021.pdf' }
-                                   ">
+                                   "
+                                   target="_blank">
                                 </a>
                             </span>
-                            <div for="buckaroo_magento2_billink_TermsCondition" generated="true" class="mage-error" id="buckaroo_magento2_billink_TermsCondition-error" style="display: none;"><span data-bind="i18n: 'This is a required field.' "></span></div>
+                            <div class="mage-error" for="buckaroo_magento2_billink_TermsCondition" generated="true"
+                                 id="buckaroo_magento2_billink_TermsCondition-error" style="display: none;"><span
+                                data-bind="i18n: 'This is a required field.' "></span></div>
                         </div>
                     </div>
 
                     <!-- ko if: showFinancialWarning  -->
-                    <span data-bind="i18n: `Je moet minimaal 18+ zijn om deze dienst te gebruiken. Als je op tijd betaalt, voorkom je extra kosten en zorg je dat je in de toekomst nogmaals gebruik kunt maken van de diensten van ${getTitle()}. Door verder te gaan, accepteer je de Algemene Voorwaarden en bevestig je dat je de Privacyverklaring en Cookieverklaring hebt gelezen.`">  </span>
+                    <span
+                        data-bind="i18n: `Je moet minimaal 18+ zijn om deze dienst te gebruiken. Als je op tijd betaalt, voorkom je extra kosten en zorg je dat je in de toekomst nogmaals gebruik kunt maken van de diensten van ${getTitle()}. Door verder te gaan, accepteer je de Algemene Voorwaarden en bevestig je dat je de Privacyverklaring en Cookieverklaring hebt gelezen.`">  </span>
                     <!-- /ko -->
 
                     <div class="field">
-                        <span data-bind="i18n: 'Please make sure all fields are filled in correctly before proceeding.' ">  </span>
+                        <span
+                            data-bind="i18n: 'Please make sure all fields are filled in correctly before proceeding.' ">  </span>
                     </div>
                 </fieldset>
             </form>
@@ -179,16 +189,16 @@
 
         <div class="actions-toolbar">
             <div class="primary">
-                <button id="button-action-checkout-billink"
-                        class="action primary checkout"
-                        type="submit"
+                <button class="action primary checkout"
                         data-bind="
                         click: placeOrder,
                         attr: {title: $t('Place Order')},
                         enable: (getCode() == isChecked()),
                         css: {disabled: !isPlaceOrderActionAllowed() || !buttoncheck() }
                         "
-                        disabled>
+                        disabled
+                        id="button-action-checkout-billink"
+                        type="submit">
                     <span data-bind="i18n: 'Place Order'"></span>
                 </button>
             </div>
