--- a/view/frontend/web/template/payment/buckaroo_magento2_capayablein3.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_capayablein3.html
@@ -20,19 +20,19 @@
     <div class="payment-method-title field choice bk-payment">
         <div class="bk-payment-wrap">
             <div class="bk-radio-wrap">
-                <input type="radio"
+                <input class="radio"
+                       data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()"
                        name="payment[method]"
-                       class="radio"
-                       data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()"/>
-                <label class="label" data-bind="attr: {'for': getCode()}" >
-                        <!-- ko text: getTitle() --><!-- /ko -->
-                        <!-- ko if: subtext !== null && subtext.length > 0 -->
-                       <p class="bk-description" data-bind="text: subtext, style: subTextStyle"></p>
-                        <!-- /ko -->
+                       type="radio">
+                <label class="label" data-bind="attr: {'for': getCode()}">
+                    <!-- ko text: getTitle() --><!-- /ko -->
+                    <!-- ko if: subtext !== null && subtext.length > 0 -->
+                    <p class="bk-description" data-bind="text: subtext, style: subTextStyle"></p>
+                    <!-- /ko -->
                 </label>
             </div>
             <div class="bk-img-wrap">
-                <img data-bind="attr: { src: require.toUrl('Buckaroo_Magento2/images/svg/' + logo) }" />
+                <img data-bind="attr: { src: require.toUrl('Buckaroo_Magento2/images/svg/' + logo) }">
             </div>
         </div>
     </div>
@@ -51,40 +51,41 @@
                 <fieldset class="fieldset payment">
 
                     <div class="field required">
-                        <label class="label" for="buckaroo_magento2_capayablein3_BillingName"> <span data-bind="i18n: 'Billing Name:'"> </span> </label>
+                        <label class="label" for="buckaroo_magento2_capayablein3_BillingName"> <span
+                            data-bind="i18n: 'Billing Name:'"> </span> </label>
                         <div class="control">
-                            <input id="buckaroo_magento2_capayablein3_BillingName"
-                                   class="input-text field"
-                                   type="text"
+                            <input class="input-text field"
                                    data-bind="value: billingName"
+                                   disabled
+                                   id="buckaroo_magento2_capayablein3_BillingName"
                                    name="payment[buckaroo_magento2_capayablein3][customer_billingName]"
-                                   disabled >
+                                   type="text">
                         </div>
                     </div>
 
-                     <!-- ko if: showPhone -->
-                     <div class="field required" >
-                        <label class="label" for="buckaroo_magento2_capayablein3_Telephone"> <span data-bind="i18n: 'Telephone:'"> </span> </label>
+                    <!-- ko if: showPhone -->
+                    <div class="field required">
+                        <label class="label" for="buckaroo_magento2_capayablein3_Telephone"> <span
+                            data-bind="i18n: 'Telephone:'"> </span> </label>
                         <div class="control">
-                            <input id="buckaroo_magento2_capayablein3_Telephone"
-                                   type="text"
-                                   class="input-text field"
+                            <input class="input-text field"
                                    data-bind="
                                    attr: { 'data-validate': JSON.stringify({ 'in3phoneValidation': true, 'required': true }) },
                                    valueUpdate: 'blur',
                                    value: phone,
                                    event: { blur: validateField }"
-                                   name="payment[buckaroo_magento2_capayablein3][customer_telephone]">
+                                   id="buckaroo_magento2_capayablein3_Telephone"
+                                   name="payment[buckaroo_magento2_capayablein3][customer_telephone]"
+                                   type="text">
                         </div>
                     </div>
                     <!-- /ko -->
 
                     <div class="field required">
-                        <label class="label" for="buckaroo_magento2_capayablein3_DoB"> <span data-bind="i18n: 'Date of Birth:'"> </span> </label>
+                        <label class="label" for="buckaroo_magento2_capayablein3_DoB"> <span
+                            data-bind="i18n: 'Date of Birth:'"> </span> </label>
                         <div class="control addon">
-                            <input id="buckaroo_magento2_capayablein3_DoB"
-                                   class="field"
-                                   type="text"
+                            <input class="field"
                                    data-bind="
                                            datepicker: {
                                                 storage: dateValidate,
@@ -103,16 +104,20 @@
                                             'data-validate': JSON.stringify({ 'required': true, 'validate-date-au': true }),
                                             placeholder: $t('DD/MM/YYYY')
                                            }"
-                                   name="payment[buckaroo_magento2_capayablein3][customer_DoB]">
+                                   id="buckaroo_magento2_capayablein3_DoB"
+                                   name="payment[buckaroo_magento2_capayablein3][customer_DoB]"
+                                   type="text">
                         </div>
                     </div>
 
                     <!-- ko if: showFinancialWarning  -->
-                    <span data-bind="i18n: `Je moet minimaal 18+ zijn om deze dienst te gebruiken. Als je op tijd betaalt, voorkom je extra kosten en zorg je dat je in de toekomst nogmaals gebruik kunt maken van de diensten van ${getTitle()}. Door verder te gaan, accepteer je de Algemene Voorwaarden en bevestig je dat je de Privacyverklaring en Cookieverklaring hebt gelezen.`">  </span>
+                    <span
+                        data-bind="i18n: `Je moet minimaal 18+ zijn om deze dienst te gebruiken. Als je op tijd betaalt, voorkom je extra kosten en zorg je dat je in de toekomst nogmaals gebruik kunt maken van de diensten van ${getTitle()}. Door verder te gaan, accepteer je de Algemene Voorwaarden en bevestig je dat je de Privacyverklaring en Cookieverklaring hebt gelezen.`">  </span>
                     <!-- /ko -->
-                    
+
                     <div class="field">
-                        <span data-bind="i18n: 'Please make sure all fields are filled in correctly before proceeding.' ">  </span>
+                        <span
+                            data-bind="i18n: 'Please make sure all fields are filled in correctly before proceeding.' ">  </span>
                     </div>
                 </fieldset>
             </form>
@@ -120,16 +125,16 @@
 
         <div class="actions-toolbar">
             <div class="primary">
-                <button id="button-action-checkout-capayablein3"
-                        class="action primary checkout"
-                        type="submit"
+                <button class="action primary checkout"
                         data-bind="
                         click: placeOrder,
                         attr: {title: $t('Place Order')},
                         enable: (getCode() == isChecked()),
                         css: {disabled: !isPlaceOrderActionAllowed() || !buttoncheck() }
                         "
-                        disabled>
+                        disabled
+                        id="button-action-checkout-capayablein3"
+                        type="submit">
                     <span data-bind="i18n: 'Place Order'"></span>
                 </button>
             </div>
