--- a/view/frontend/web/template/payment/buckaroo_magento2_capayablepostpay.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_capayablepostpay.html
@@ -20,19 +20,20 @@
     <div class="payment-method-title field choice bk-payment">
         <div class="bk-payment-wrap">
             <div class="bk-radio-wrap">
-                <input type="radio"
+                <input class="radio"
+                       data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()"
                        name="payment[method]"
-                       class="radio"
-                       data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()"/>
-                <label class="label" data-bind="attr: {'for': getCode()}" >
-                        <!-- ko text: getTitle() --><!-- /ko -->
-                        <!-- ko if: subtext !== null && subtext.length > 0 -->
-                       <p class="bk-description" data-bind="text: subtext, style: subTextStyle"></p>
-                        <!-- /ko -->
+                       type="radio">
+                <label class="label" data-bind="attr: {'for': getCode()}">
+                    <!-- ko text: getTitle() --><!-- /ko -->
+                    <!-- ko if: subtext !== null && subtext.length > 0 -->
+                    <p class="bk-description" data-bind="text: subtext, style: subTextStyle"></p>
+                    <!-- /ko -->
                 </label>
             </div>
             <div class="bk-img-wrap">
-                <img data-bind="attr: { src: require.toUrl('Buckaroo_Magento2/images/svg/'+getCode().replace('buckaroo_magento2_','')+'.svg') }" />
+                <img
+                    data-bind="attr: { src: require.toUrl('Buckaroo_Magento2/images/svg/'+getCode().replace('buckaroo_magento2_','')+'.svg') }">
             </div>
         </div>
     </div>
@@ -51,25 +52,25 @@
                 <fieldset class="fieldset payment">
 
                     <div class="field required">
-                        <label class="label" for="buckaroo_magento2_capayablepostpay_BillingName"> <span data-bind="i18n: 'Billing Name:'"> </span> </label>
+                        <label class="label" for="buckaroo_magento2_capayablepostpay_BillingName"> <span
+                            data-bind="i18n: 'Billing Name:'"> </span> </label>
                         <div class="control">
-                            <input id="buckaroo_magento2_capayablepostpay_BillingName"
-                                   class="input-text field"
-                                   type="text"
+                            <input class="input-text field"
                                    data-bind="
                                            value: BillingName,
                                            textInput: CustomerName()"
+                                   disabled
+                                   id="buckaroo_magento2_capayablepostpay_BillingName"
                                    name="payment[buckaroo_magento2_capayablepostpay][customer_billingName]"
-                                   disabled >
+                                   type="text">
                         </div>
                     </div>
 
                     <div class="field required">
-                        <label class="label" for="buckaroo_magento2_capayablepostpay_DoB"> <span data-bind="i18n: 'Date of Birth:'"> </span> </label>
+                        <label class="label" for="buckaroo_magento2_capayablepostpay_DoB"> <span
+                            data-bind="i18n: 'Date of Birth:'"> </span> </label>
                         <div class="control addon">
-                            <input id="buckaroo_magento2_capayablepostpay_DoB"
-                                   class="field"
-                                   type="text"
+                            <input class="field"
                                    data-bind="
                                            datepicker: {
                                                 storage: dateValidate,
@@ -88,16 +89,21 @@
                                             'data-validate': JSON.stringify({ 'required': true, 'validate-date-au': true }),
                                             placeholder: $t('DD/MM/YYYY')
                                            }"
-                                   name="payment[buckaroo_magento2_capayablepostpay][customer_DoB]">
+                                   id="buckaroo_magento2_capayablepostpay_DoB"
+                                   name="payment[buckaroo_magento2_capayablepostpay][customer_DoB]"
+                                   type="text">
                         </div>
-                        <div for="buckaroo_magento2_capayablepostpay_DoB" generated="true" class="mage-error" id="dob-error" style="display: none;"><span data-bind="i18n: 'This is a required field.'"></span> </div>
+                        <div class="mage-error" for="buckaroo_magento2_capayablepostpay_DoB" generated="true"
+                             id="dob-error" style="display: none;"><span
+                            data-bind="i18n: 'This is a required field.'"></span></div>
                     </div>
 
                     <div class="field">
-                        <label class="label" for="buckaroo_magento2_capayablepostpay_OrderAs"> <span data-bind="i18n: 'Order As:'"> </span> </label>
+                        <label class="label" for="buckaroo_magento2_capayablepostpay_OrderAs"> <span
+                            data-bind="i18n: 'Order As:'"> </span> </label>
                         <div class="control">
-                            <select id="buckaroo_magento2_capayablepostpay_OrderAs"
-                                    data-bind="value: selectedOrderAs"
+                            <select data-bind="value: selectedOrderAs"
+                                    id="buckaroo_magento2_capayablepostpay_OrderAs"
                                     name="payment[buckaroo_magento2_capayablepostpay][orderAs]">
                                 <option data-bind="i18n: 'Private'" value="1"></option>
                                 <option data-bind="i18n: 'Company'" value="2"></option>
@@ -107,41 +113,45 @@
                     </div>
 
                     <!-- ko if: selectedOrderAs() == 2 || selectedOrderAs() == 3 -->
-                    <div class="field required" >
-                        <label class="label" for="buckaroo_magento2_capayablepostpay_COCNumber"> <span data-bind="i18n: 'COC Number:'"> </span> </label>
+                    <div class="field required">
+                        <label class="label" for="buckaroo_magento2_capayablepostpay_COCNumber"> <span
+                            data-bind="i18n: 'COC Number:'"> </span> </label>
                         <div class="control">
-                            <input id="buckaroo_magento2_capayablepostpay_COCNumber"
-                                   name="payment[buckaroo_magento2_capayablepostpay][COCNumber]"
-                                   class="input-text field"
-                                   type="text"
+                            <input class="input-text field"
                                    data-bind="
                                        valueUpdate: 'keyup',
                                        value: CocNumber,
-                                       attr: { 'data-validate': JSON.stringify({'required': true, 'minlength': 8}) }">
+                                       attr: { 'data-validate': JSON.stringify({'required': true, 'minlength': 8}) }"
+                                   id="buckaroo_magento2_capayablepostpay_COCNumber"
+                                   name="payment[buckaroo_magento2_capayablepostpay][COCNumber]"
+                                   type="text">
                         </div>
                     </div>
 
-                    <div class="field required" >
-                        <label class="label" for="buckaroo_magento2_capayablepostpay_CompanyName"> <span data-bind="i18n: 'Company Name:'"> </span> </label>
+                    <div class="field required">
+                        <label class="label" for="buckaroo_magento2_capayablepostpay_CompanyName"> <span
+                            data-bind="i18n: 'Company Name:'"> </span> </label>
                         <div class="control">
-                            <input id="buckaroo_magento2_capayablepostpay_CompanyName"
-                                   name="payment[buckaroo_magento2_capayablepostpay][CompanyName]"
-                                   class="input-text field"
-                                   type="text"
+                            <input class="input-text field"
                                    data-bind="
                                        valueUpdate: 'keyup',
                                        value: CompanyName,
-                                       attr: { 'data-validate': JSON.stringify({'required': true, 'min-words': 1 })}">
+                                       attr: { 'data-validate': JSON.stringify({'required': true, 'min-words': 1 })}"
+                                   id="buckaroo_magento2_capayablepostpay_CompanyName"
+                                   name="payment[buckaroo_magento2_capayablepostpay][CompanyName]"
+                                   type="text">
                         </div>
                     </div>
                     <!-- /ko -->
 
                     <!-- ko if: showFinancialWarning  -->
-                    <span data-bind="i18n: `Je moet minimaal 18+ zijn om deze dienst te gebruiken. Als je op tijd betaalt, voorkom je extra kosten en zorg je dat je in de toekomst nogmaals gebruik kunt maken van de diensten van ${getTitle()}. Door verder te gaan, accepteer je de Algemene Voorwaarden en bevestig je dat je de Privacyverklaring en Cookieverklaring hebt gelezen.`">  </span>
+                    <span
+                        data-bind="i18n: `Je moet minimaal 18+ zijn om deze dienst te gebruiken. Als je op tijd betaalt, voorkom je extra kosten en zorg je dat je in de toekomst nogmaals gebruik kunt maken van de diensten van ${getTitle()}. Door verder te gaan, accepteer je de Algemene Voorwaarden en bevestig je dat je de Privacyverklaring en Cookieverklaring hebt gelezen.`">  </span>
                     <!-- /ko -->
 
                     <div class="field">
-                        <span data-bind="i18n: 'Please make sure all fields are filled in correctly before proceeding.' ">  </span>
+                        <span
+                            data-bind="i18n: 'Please make sure all fields are filled in correctly before proceeding.' ">  </span>
                     </div>
                 </fieldset>
             </form>
@@ -149,16 +159,16 @@
 
         <div class="actions-toolbar">
             <div class="primary">
-                <button id="button-action-checkout-capayablepostpay"
-                        class="action primary checkout"
-                        type="submit"
+                <button class="action primary checkout"
                         data-bind="
                         click: placeOrder,
                         attr: {title: $t('Place Order')},
                         enable: (getCode() == isChecked()),
                         css: {disabled: !isPlaceOrderActionAllowed() || !buttoncheck() }
                         "
-                        disabled>
+                        disabled
+                        id="button-action-checkout-capayablepostpay"
+                        type="submit">
                     <span data-bind="i18n: 'Place Order'"></span>
                 </button>
             </div>
