--- a/view/frontend/web/template/payment/buckaroo_magento2_creditcards.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_creditcards.html
@@ -2,10 +2,10 @@
     <div class="payment-method-title field choice bk-payment">
         <div class="bk-payment-wrap">
             <div class="bk-radio-wrap">
-                <input type="radio"
+                <input class="radio"
+                       data-bind="attr: { 'id': getCode() }, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()"
                        name="payment[method]"
-                       class="radio"
-                       data-bind="attr: { 'id': getCode() }, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()"/>
+                       type="radio">
                 <label class="label" data-bind="attr: { 'for': getCode() }">
                     <!-- ko text: getTitle() --><!-- /ko -->
                     <!-- ko if: subtext && subtext.length -->
@@ -14,7 +14,8 @@
                 </label>
             </div>
             <div class="bk-img-wrap">
-                <img data-bind="attr: { src: require.toUrl('Buckaroo_Magento2/images/svg/creditcards.svg') }" alt="Credit Cards"/>
+                <img alt="Credit Cards"
+                     data-bind="attr: { src: require.toUrl('Buckaroo_Magento2/images/svg/creditcards.svg') }">
             </div>
         </div>
     </div>
@@ -30,59 +31,63 @@
         <form>
             <div class="payment-method-second-col payment-method-second-col-tailwind billing-address-form">
                 <div class="mb-4 field">
-                    <label id="cc-name-label" for="cc-name-wrapper" class="label">
+                    <label class="label" for="cc-name-wrapper" id="cc-name-label">
                         <span data-bind="i18n: 'Cardholder Name:'"></span>
                     </label>
-                    <div id="cc-name-wrapper"
-                         class="shadow h-12 appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
+                    <div class="shadow h-12 appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                         id="cc-name-wrapper">
                     </div>
-                    <div id="cc-name-error" class="mage-error"></div>
+                    <div class="mage-error" id="cc-name-error"></div>
                 </div>
 
                 <div class="mb-4 field">
-                    <label id="cc-number-label" for="cc-number-wrapper" class="label">
+                    <label class="label" for="cc-number-wrapper" id="cc-number-label">
                         <span data-bind="i18n: 'Card Number:'"></span>
                     </label>
-                    <div id="cc-number-wrapper"
-                         class="shadow h-12 appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
+                    <div class="shadow h-12 appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                         id="cc-number-wrapper">
                     </div>
-                    <div id="cc-number-error" class="mage-error"></div>
+                    <div class="mage-error" id="cc-number-error"></div>
                 </div>
 
                 <div class="mb-6 field">
                     <div class="grid grid-cols-2 gap-4">
                         <div class="col-span-1">
-                            <label id="cc-expiry-label" for="cc-expiry-wrapper" class="label">
+                            <label class="label" for="cc-expiry-wrapper" id="cc-expiry-label">
                                 <span data-bind="i18n: 'Expiry Date:'"></span>
                             </label>
-                            <div id="cc-expiry-wrapper"
-                                 class="shadow h-12 appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
+                            <div class="shadow h-12 appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                                 id="cc-expiry-wrapper">
                             </div>
-                            <div id="cc-expiry-error" class="mage-error"></div>
+                            <div class="mage-error" id="cc-expiry-error"></div>
                         </div>
                         <div class="col-span-1">
-                            <label id="cc-cvc-label" for="cc-cvc-wrapper" class="label">
+                            <label class="label" for="cc-cvc-wrapper" id="cc-cvc-label">
                                 <span data-bind="i18n: 'CVC:'"></span>
                             </label>
-                            <div id="cc-cvc-wrapper"
-                                 class="shadow h-12 appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
+                            <div class="shadow h-12 appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                                 id="cc-cvc-wrapper">
                             </div>
-                            <div id="cc-cvc-error" class="mage-error"></div>
+                            <div class="mage-error" id="cc-cvc-error"></div>
                         </div>
                     </div>
                 </div>
 
                 <div class="field">
-                    <span data-bind="i18n: 'Please make sure all fields are filled in correctly before proceeding.'"></span>
-                    <a class="text-gray-500 hover:text-gray-800 float-right ml-2" href="#" data-bind="click: resetHostedFields, i18n: 'Clear'"></a>
+                    <span
+                        data-bind="i18n: 'Please make sure all fields are filled in correctly before proceeding.'"></span>
+                    <a class="text-gray-500 hover:text-gray-800 float-right ml-2" data-bind="click: resetHostedFields, i18n: 'Clear'"
+                       href="#"></a>
                 </div>
 
-                <div class="field oauth-token-error mage-error" data-bind="text: oauthTokenError, visible: oauthTokenError"></div>
+                <div class="field oauth-token-error mage-error"
+                     data-bind="text: oauthTokenError, visible: oauthTokenError"></div>
                 <div class="field payment-error mage-error" data-bind="text: paymentError, visible: paymentError"></div>
             </div>
             <div class="actions-toolbar creditcards">
                 <div class="primary">
-                    <button id="buckaroo-pay" class="action primary checkout" data-bind="click: onPayClick, attr: { disabled: isPayButtonDisabled }">
+                    <button class="action primary checkout" data-bind="click: onPayClick, attr: { disabled: isPayButtonDisabled }"
+                            id="buckaroo-pay">
                         <span data-bind="i18n: 'Place Order'"></span>
                     </button>
                 </div>
