--- a/view/frontend/web/template/payment/buckaroo_magento2_emandate.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_emandate.html
@@ -2,19 +2,19 @@
     <div class="payment-method-title field choice bk-payment">
         <div class="bk-payment-wrap">
             <div class="bk-radio-wrap">
-                <input type="radio"
+                <input class="radio"
+                       data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()"
                        name="payment[method]"
-                       class="radio"
-                       data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()"/>
-                <label class="label" data-bind="attr: {'for': getCode()}" >
-                        <!-- ko text: getTitle() --><!-- /ko -->
-                        <!-- ko if: subtext !== null && subtext.length > 0 -->
-                       <p class="bk-description" data-bind="text: subtext, style: subTextStyle"></p>
-                        <!-- /ko -->
+                       type="radio">
+                <label class="label" data-bind="attr: {'for': getCode()}">
+                    <!-- ko text: getTitle() --><!-- /ko -->
+                    <!-- ko if: subtext !== null && subtext.length > 0 -->
+                    <p class="bk-description" data-bind="text: subtext, style: subTextStyle"></p>
+                    <!-- /ko -->
                 </label>
             </div>
             <div class="bk-img-wrap">
-                <img data-bind="attr: { src: require.toUrl('Buckaroo_Magento2/images/emandate.png') }" />
+                <img data-bind="attr: { src: require.toUrl('Buckaroo_Magento2/images/emandate.png') }">
             </div>
         </div>
     </div>
@@ -30,9 +30,9 @@
             <!--/ko-->
         </div>
 
-        <div class="payment-method-second-col billing-address-form" >
+        <div class="payment-method-second-col billing-address-form">
             <div class="fieldset payment">
-                <div class="field required" >
+                <div class="field required">
                     <legend class="label" data-bind="i18n: 'Select a bank:'"></legend>
                     <div class="control">
                         <!-- ko foreach: banktypes -->
@@ -42,7 +42,9 @@
                                      'width': 30,
                                      'height': 23 }"
                             />
-                            <input class="bank-types-input" type="radio" data-bind="value: code, click: $parent.setSelectedBank" name="bank"> <!-- ko text: name --><!--/ko-->
+                            <input class="bank-types-input" data-bind="value: code, click: $parent.setSelectedBank"
+                                   name="bank" type="radio">
+                            <!-- ko text: name --><!--/ko-->
                         </label>
                         <!--/ko-->
                     </div>
@@ -58,16 +60,16 @@
 
         <div class="actions-toolbar">
             <div class="primary">
-                <button id="button-action-checkout-emandate"
-                        class="action primary checkout"
-                        type="submit"
+                <button class="action primary checkout"
                         data-bind="
                         click: placeOrder,
                         attr: {title: $t('Place Order')},
                         enable: (getCode() == isChecked()),
                         css: {disabled: !isPlaceOrderActionAllowed() || !buttoncheck() }
                         "
-                        disabled>
+                        disabled
+                        id="button-action-checkout-emandate"
+                        type="submit">
                     <span data-bind="i18n: 'Place Order'"></span>
                 </button>
             </div>
