--- a/view/frontend/web/template/payment/buckaroo_magento2_giftcards.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_giftcards.html
@@ -1,13 +1,14 @@
 <!-- ko if: isGiftcardsRedirectMode() -->
-<div class="buckaroo_magento2_giftcards buckaroo_magento2_giftcards_group payment-method" data-bind="afterRender: checkForPayments,css: {'_active': (getCode() == isChecked())}">
+<div class="buckaroo_magento2_giftcards buckaroo_magento2_giftcards_group payment-method"
+     data-bind="afterRender: checkForPayments,css: {'_active': (getCode() == isChecked())}">
     <div class="payment-method-title field choice bk-payment">
         <div class="bk-payment-wrap">
             <div class="bk-radio-wrap">
-                <input type="radio"
+                <input class="radio"
+                       data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()"
                        name="payment[method]"
-                       class="radio"
-                       data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()"/>
-                <label class="label" data-bind="attr: {'for': getCode()}" >
+                       type="radio">
+                <label class="label" data-bind="attr: {'for': getCode()}">
                     <!-- ko text: getTitle() --><!-- /ko -->
                     <!-- ko if: subtext !== null && subtext.length > 0 -->
                     <p class="bk-description" data-bind="text: subtext, style: subTextStyle"></p>
@@ -15,7 +16,7 @@
                 </label>
             </div>
             <div class="bk-img-wrap">
-                <img data-bind="attr: { src: require.toUrl('Buckaroo_Magento2/images/svg/giftcards.svg') }" />
+                <img data-bind="attr: { src: require.toUrl('Buckaroo_Magento2/images/svg/giftcards.svg') }">
             </div>
         </div>
     </div>
@@ -39,16 +40,16 @@
 
         <div class="actions-toolbar">
             <div class="primary">
-                <button id="button-action-checkout-giftcards-redirect"
-                        class="action primary checkout"
-                        type="submit"
+                <button class="action primary checkout"
                         data-bind="
                         click: placeOrder,
                         attr: {title: $t('Place Order')},
                         enable: (getCode() == isChecked()),
                         css: {disabled: !isPlaceOrderActionAllowed() }
                         "
-                        disabled>
+                        disabled
+                        id="button-action-checkout-giftcards-redirect"
+                        type="submit">
                     <span data-bind="i18n: 'Place Order'"></span>
                 </button>
             </div>
@@ -66,22 +67,24 @@
 
 <!-- ko ifnot: isGiftcardsRedirectMode() -->
 
-<div class="buckaroo_magento2_all_giftcards" data-bind="foreach: { data: allgiftcards, as: 'giftcard', noChildContext: false }">
-    <div data-bind="attr: { 'class': 'buckaroo_magento2_all_giftcard payment-method buckaroo_magento2_' + code }, css: {'_active': ($parent.getCode() == $parent.isChecked() && $parent.getGiftcardType() == code)}">
+<div class="buckaroo_magento2_all_giftcards"
+     data-bind="foreach: { data: allgiftcards, as: 'giftcard', noChildContext: false }">
+    <div
+        data-bind="attr: { 'class': 'buckaroo_magento2_all_giftcard payment-method buckaroo_magento2_' + code }, css: {'_active': ($parent.getCode() == $parent.isChecked() && $parent.getGiftcardType() == code)}">
 
         <div class="payment-method-title field choice bk-payment">
             <div class="bk-payment-wrap">
                 <div class="bk-radio-wrap">
-                    <input type="radio"
+                    <input class="radio"
+                           data-bind="attr: {'id': code, 'data-method': 'buckaroo_magento2_giftcards'}, value: code,  click: $parent.selectGiftCardPaymentMethod.bind($parent, code), checked: $parent.isCheckedGiftCardPaymentMethod.bind($parent, code), visible: $parent.isRadioButtonVisible()"
                            name="payment[method]"
-                           class="radio"
-                           data-bind="attr: {'id': code, 'data-method': 'buckaroo_magento2_giftcards'}, value: code,  click: $parent.selectGiftCardPaymentMethod.bind($parent, code), checked: $parent.isCheckedGiftCardPaymentMethod.bind($parent, code), visible: $parent.isRadioButtonVisible()"/>
-                    <label class="label" data-bind="attr: {'for': code}" >
+                           type="radio">
+                    <label class="label" data-bind="attr: {'for': code}">
                         <!-- ko text: title --><!-- /ko -->
                     </label>
                 </div>
                 <div class="bk-img-wrap">
-                    <img data-bind="attr: { src: logo }" />
+                    <img data-bind="attr: { src: logo }"/>
                 </div>
             </div>
         </div>
@@ -98,27 +101,28 @@
             </div>
 
             <div class="payment-method-second-col billing-address-form">
-                <form method="post"
-                      data-role="$parent.save"
-                      data-bind="$parent.submit:$parent.save,
+                <form data-bind="$parent.submit:$parent.save,
                   mageInit: { 'validation': [] },
-                  attr: {'data-hasrequired': $t('* Required Fields')}">
+                  attr: {'data-hasrequired': $t('* Required Fields')}"
+                      data-role="$parent.save"
+                      method="post">
                     <fieldset class="fieldset payment styled">
 
                         <div class="fieldset card_front width-100">
 
-                            <div class="field required width-100" >
-                                <label class="label" for="buckaroo_magento2_giftcards_cardnumber"> <span data-bind="i18n: 'Card number:'"> </span> </label>
+                            <div class="field required width-100">
+                                <label class="label" for="buckaroo_magento2_giftcards_cardnumber"> <span
+                                    data-bind="i18n: 'Card number:'"> </span> </label>
                                 <div class="control">
-                                    <input type="text"
-                                           class="input-text field buckaroo_magento2_giftcards_input"
-                                           name="payment[buckaroo_magento2_giftcards][cardnumber]"
+                                    <input class="input-text field buckaroo_magento2_giftcards_input"
                                            data-bind="
                             valueUpdate: 'blur',
                             value: $parent.CardNumber,
                             textInput: $parent.CardNumber(),
                             attr: { 'data-card': code, 'id': 'buckaroo_magento2_giftcards_cardnumber_' + code, 'data-validate': JSON.stringify({ 'required': true, '$parent.validateCardNumber': true }) },
-                            event: { blur: $parent.checkValidness }">
+                            event: { blur: $parent.checkValidness }"
+                                           name="payment[buckaroo_magento2_giftcards][cardnumber]"
+                                           type="text">
                                 </div>
                             </div>
 
@@ -126,18 +130,19 @@
 
                                 <div class="magnet_stripe width-100"></div>
 
-                                <div class="field required card_security width-100" >
-                                    <label class="label width-65-l" for="buckaroo_magento2_giftcards_pin"> <span data-bind="i18n: 'PIN / Security code:'"> </span> </label>
+                                <div class="field required card_security width-100">
+                                    <label class="label width-65-l" for="buckaroo_magento2_giftcards_pin"> <span
+                                        data-bind="i18n: 'PIN / Security code:'"> </span> </label>
                                     <div class="control card-info-input width-25-l">
-                                        <input type="text"
-                                               class="input-text field buckaroo_magento2_giftcards_input"
-                                               name="payment[buckaroo_magento2_giftcards][pin]"
+                                        <input class="input-text field buckaroo_magento2_giftcards_input"
                                                data-bind="
                             valueUpdate: 'blur',
                             value: $parent.Pin,
                             textInput: $parent.Pin(),
                             attr: { 'id': 'buckaroo_magento2_giftcards_pin_' + code, 'data-validate': JSON.stringify({ 'required': true, '$parent.validatePin': true }) },
-                            event: { blur: $parent.checkValidness }">
+                            event: { blur: $parent.checkValidness }"
+                                               name="payment[buckaroo_magento2_giftcards][pin]"
+                                               type="text">
                                     </div>
                                     <div class="card_info width-10">
                                         <div class="popup">
@@ -147,7 +152,8 @@
                             </div>
 
                             <div class="field width-100">
-                                <span data-bind="i18n: 'Please make sure all fields are filled in correctly before proceeding.' "></span>
+                                <span
+                                    data-bind="i18n: 'Please make sure all fields are filled in correctly before proceeding.' "></span>
                                 <span class="apply-gift-card action primary" data-bind="
                             click: $parent.applyGiftcard.bind($parent),
                             i18n: 'Apply Gift Card',
@@ -169,16 +175,16 @@
 
             <div class="actions-toolbar">
                 <div class="primary">
-                    <button id="button-action-checkout-giftcards"
-                            class="action primary checkout"
-                            type="submit"
+                    <button class="action primary checkout"
                             data-bind="
                             click: $parent.placeOrder.bind($parent),
                             attr: {title: $t('Place Order')},
                             enable: ($parent.getCode() == $parent.isChecked()),
                             css: {disabled: !$parent.buttoncheck()}
                             "
-                            disabled>
+                            disabled
+                            id="button-action-checkout-giftcards"
+                            type="submit">
                         <span data-bind="i18n: 'Place Order'"></span>
                     </button>
                 </div>
@@ -193,6 +199,6 @@
     </div>
 </div>
 
-<div data-bind='afterRender: checkForPayments'> </div>
+<div data-bind='afterRender: checkForPayments'></div>
 <!-- /ko -->
 
