--- a/view/frontend/web/template/payment/buckaroo_magento2_klarna.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_klarna.html
@@ -3,19 +3,19 @@
     <div class="payment-method-title field choice bk-payment">
         <div class="bk-payment-wrap">
             <div class="bk-radio-wrap">
-                <input type="radio"
+                <input class="radio"
+                       data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()"
                        name="payment[method]"
-                       class="radio"
-                       data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()"/>
-                <label class="label" data-bind="attr: {'for': getCode()}" >
-                        <!-- ko text: getTitle() --><!-- /ko -->
-                        <!-- ko if: subtext !== null && subtext.length > 0 -->
-                       <p class="bk-description" data-bind="text: subtext, style: subTextStyle"></p>
-                        <!-- /ko -->
+                       type="radio">
+                <label class="label" data-bind="attr: {'for': getCode()}">
+                    <!-- ko text: getTitle() --><!-- /ko -->
+                    <!-- ko if: subtext !== null && subtext.length > 0 -->
+                    <p class="bk-description" data-bind="text: subtext, style: subTextStyle"></p>
+                    <!-- /ko -->
                 </label>
             </div>
             <div class="bk-img-wrap">
-                <img data-bind="attr: { src: require.toUrl('Buckaroo_Magento2/images/svg/klarna.svg') }" />
+                <img data-bind="attr: { src: require.toUrl('Buckaroo_Magento2/images/svg/klarna.svg') }">
             </div>
         </div>
     </div>
@@ -34,16 +34,18 @@
                   attr: {'data-hasrequired': $t('* Required Fields')}">
                 <fieldset class="fieldset">
                     <div class="field required">
-                        <label class="label" for="buckaroo_magento2_klarna_genderSelect"> <span data-bind="i18n: 'Salutation:'"> </span> </label>
+                        <label class="label" for="buckaroo_magento2_klarna_genderSelect"> <span
+                            data-bind="i18n: 'Salutation:'"> </span> </label>
                         <div class="control addon">
-                            <select id="buckaroo_magento2_klarna_genderSelect" name="payment[buckaroo_magento2_klarna][customer_gender]" class="select"
-                            data-bind="options: genderList,
+                            <select class="select"
+                                    data-bind="options: genderList,
                             optionsText: $t('genderTitle'),
                             optionsValue: 'genderType',
                             optionsCaption: $t('-- Please Select Your Gender--'),
                             value: selectedGender,
                             attr: { 'data-validate': JSON.stringify({ 'required': true })},
-                            event: { change: validateField }">
+                            event: { change: validateField }" id="buckaroo_magento2_klarna_genderSelect"
+                                    name="payment[buckaroo_magento2_klarna][customer_gender]">
                             </select>
                         </div>
                     </div>
@@ -57,8 +59,7 @@
 
         <div class="actions-toolbar">
             <div class="primary">
-                <button id="button-action-checkout-klarna"
-                        class="action primary checkout"
+                <button class="action primary checkout"
                         data-bind="
                         click: placeOrder,
                         attr: {title: $t('Place Order')},
@@ -66,6 +67,7 @@
                         css: {disabled: !isPlaceOrderActionAllowed() || !buttoncheck() }
                         "
                         disabled
+                        id="button-action-checkout-klarna"
                         type="submit">
                     <span data-bind="i18n: 'Place Order'"></span>
                 </button>
