--- a/view/frontend/web/template/payment/buckaroo_magento2_klarnakp.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_klarnakp.html
@@ -2,38 +2,37 @@
     <div class="payment-method-title field choice bk-payment">
         <div class="bk-payment-wrap">
             <div class="bk-radio-wrap">
-                <input type="radio"
+                <input class="radio"
+                       data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()"
                        name="payment[method]"
-                       class="radio"
-                       data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()"/>
-                <label class="label" data-bind="attr: {'for': getCode()}" >
-                        <!-- ko text: getTitle() --><!-- /ko -->
-                        <!-- ko if: subtext !== null && subtext.length > 0 -->
-                       <p class="bk-description" data-bind="text: subtext, style: subTextStyle"></p>
-                        <!-- /ko -->
+                       type="radio">
+                <label class="label" data-bind="attr: {'for': getCode()}">
+                    <!-- ko text: getTitle() --><!-- /ko -->
+                    <!-- ko if: subtext !== null && subtext.length > 0 -->
+                    <p class="bk-description" data-bind="text: subtext, style: subTextStyle"></p>
+                    <!-- /ko -->
                 </label>
             </div>
             <div class="bk-img-wrap">
-                <img data-bind="attr: { src: require.toUrl('Buckaroo_Magento2/images/svg/klarna.svg') }" />
+                <img data-bind="attr: { src: require.toUrl('Buckaroo_Magento2/images/svg/klarna.svg') }">
             </div>
         </div>
     </div>
 
-        <div class="payment-method-content">
+    <div class="payment-method-content">
 
-            <div class="payment-method-billing-address">
+        <div class="payment-method-billing-address">
             <!-- ko foreach: $parent.getRegion(getBillingAddressFormName()) -->
             <!-- ko template: getTemplate() --><!-- /ko -->
             <!--/ko-->
-            </div>
-            <!-- ko if: showFinancialWarning  -->
-            <span data-bind="html: getMessageText()"></span>
-            <!-- /ko -->
+        </div>
+        <!-- ko if: showFinancialWarning  -->
+        <span data-bind="html: getMessageText()"></span>
+        <!-- /ko -->
 
         <div class="actions-toolbar">
             <div class="primary">
-                <button id="button-action-checkout-klarnakp"
-                        class="action primary checkout"
+                <button class="action primary checkout"
                         data-bind="
                         click: placeOrder,
                         attr: {title: $t('Place Order')},
@@ -41,6 +40,7 @@
                         css: {disabled: !isPlaceOrderActionAllowed() }
                         "
                         disabled
+                        id="button-action-checkout-klarnakp"
                         type="submit">
                     <span data-bind="i18n: 'Place Order'"></span>
                 </button>
