--- a/view/frontend/web/template/payment/buckaroo_magento2_mrcash.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_mrcash.html
@@ -2,19 +2,19 @@
     <div class="payment-method-title field choice bk-payment">
         <div class="bk-payment-wrap">
             <div class="bk-radio-wrap">
-                <input type="radio"
+                <input class="radio"
+                       data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()"
                        name="payment[method]"
-                       class="radio"
-                       data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()"/>
-                <label class="label" data-bind="attr: {'for': getCode()}" >
-                        <!-- ko text: getTitle() --><!-- /ko -->
-                        <!-- ko if: subtext !== null && subtext.length > 0 -->
-                       <p class="bk-description" data-bind="text: subtext, style: subTextStyle"></p>
-                        <!-- /ko -->
+                       type="radio">
+                <label class="label" data-bind="attr: {'for': getCode()}">
+                    <!-- ko text: getTitle() --><!-- /ko -->
+                    <!-- ko if: subtext !== null && subtext.length > 0 -->
+                    <p class="bk-description" data-bind="text: subtext, style: subTextStyle"></p>
+                    <!-- /ko -->
                 </label>
             </div>
             <div class="bk-img-wrap">
-                <img data-bind="attr: { src: require.toUrl('Buckaroo_Magento2/images/svg/bancontact.svg') }" />
+                <img data-bind="attr: { src: require.toUrl('Buckaroo_Magento2/images/svg/bancontact.svg') }">
             </div>
         </div>
     </div>
@@ -30,40 +30,41 @@
 
         <div class="payment-method-second-col billing-address-form">
 
-            <input id="buckaroo_magento2_mrcash_clientSideModeCc" class="bank-types-input" type="radio" value="cc"
-                   data-bind="checked: clientSideMode" name="payment[buckaroo_magento2_mrcash][clientsidemode]">
-            <label for="buckaroo_magento2_mrcash_clientSideModeCc"><span data-bind="i18n: 'Bancontact card'"></span></label>
+            <input class="bank-types-input" data-bind="checked: clientSideMode" id="buckaroo_magento2_mrcash_clientSideModeCc" name="payment[buckaroo_magento2_mrcash][clientsidemode]"
+                   type="radio" value="cc">
+            <label for="buckaroo_magento2_mrcash_clientSideModeCc"><span
+                data-bind="i18n: 'Bancontact card'"></span></label>
             <br>
 
             <!-- ko if: clientSideMode() == 'cc' -->
             <form data-bind="mageInit: { 'validation': [] },
-                  attr: {'data-hasrequired': $t('* Required Fields')}" id="buckaroo_magento2_mrcash_clientSideModeCc_block">
+                  attr: {'data-hasrequired': $t('* Required Fields')}"
+                  id="buckaroo_magento2_mrcash_clientSideModeCc_block">
                 <fieldset class="fieldset bk-mrcash">
-                        <div class="field required">
-                            <label class="label" for="buckaroo_magento2_mrcash_cardholdername"> <span data-bind="i18n: 'Name on card:'"> </span> </label>
-                            <div class="control">
-                                <input id="buckaroo_magento2_mrcash_cardholdername"
-                                       placeholder="John Doe"
-                                       type="text"
-                                       class="input-text field"
-                                       name="payment[buckaroo_magento2_mrcash][cardholdername]"
-                                       data-bind="
+                    <div class="field required">
+                        <label class="label" for="buckaroo_magento2_mrcash_cardholdername"> <span
+                            data-bind="i18n: 'Name on card:'"> </span> </label>
+                        <div class="control">
+                            <input class="input-text field"
+                                   data-bind="
                             valueUpdate: 'blur',
                             value: cardHolderName,
                             attr: { 'data-validate': JSON.stringify({ 'required': true, 'validateCardHolderName': true }) },
-                            event: { blur: validateField }">
-                            </div>
+                            event: { blur: validateField }"
+                                   id="buckaroo_magento2_mrcash_cardholdername"
+                                   name="payment[buckaroo_magento2_mrcash][cardholdername]"
+                                   placeholder="John Doe"
+                                   type="text">
                         </div>
+                    </div>
 
-                        <div class="bk-card-date-wrap">
-                            <div class="field required bk-card-number" >
-                                <label class="label" for="buckaroo_magento2_mrcash_cardnumber"> <span data-bind="i18n: 'Card number:'"> </span> </label>
-                                <div class="control">
-                                    <input id="buckaroo_magento2_mrcash_cardnumber"
-                                        type="text"
-                                        class="input-text field"
-                                        name="payment[buckaroo_magento2_mrcash][cardnumber]"
-                                        data-bind="
+                    <div class="bk-card-date-wrap">
+                        <div class="field required bk-card-number">
+                            <label class="label" for="buckaroo_magento2_mrcash_cardnumber"> <span
+                                data-bind="i18n: 'Card number:'"> </span> </label>
+                            <div class="control">
+                                <input class="input-text field"
+                                       data-bind="
                                         valueUpdate: 'input',
                                         value: formatedCardNumber,
                                         attr: {
@@ -71,43 +72,49 @@
                                             'maxlength': 23,
                                             'placeholder': '0000 0000 0000 0000'
                                         },
-                                        event: { blur: validateField }">
-                                </div>
+                                        event: { blur: validateField }"
+                                       id="buckaroo_magento2_mrcash_cardnumber"
+                                       name="payment[buckaroo_magento2_mrcash][cardnumber]"
+                                       type="text">
                             </div>
+                        </div>
 
-                            <div class="field required bk-date">
-                                <label class="label" for="buckaroo_magento2_mrcash_expireDate">
-                                    <span data-bind="i18n: 'Expiration:'"></span>
-                                </label>
-                                <div class="control">
-                                    <input id="buckaroo_magento2_mrcash_expireDate"
-                                        type="text"
-                                        class="input-text field"
-                                        name="payment[buckaroo_magento2_mrcash][expireDate]"
-                                        data-bind="
+                        <div class="field required bk-date">
+                            <label class="label" for="buckaroo_magento2_mrcash_expireDate">
+                                <span data-bind="i18n: 'Expiration:'"></span>
+                            </label>
+                            <div class="control">
+                                <input class="input-text field"
+                                       data-bind="
                                 valueUpdate: 'input',
                                 value: formatedExpirationDate,
-                                attr: { 
+                                attr: {
                                     'data-validate': JSON.stringify(
                                         { 'required': true,  'bkValidateMonth': true, 'bkValidateYear': true }
                                     ),
                                     'maxlength': 5,
                                     'placeholder': 'MM/YY'
                                 },
-                                event: { blur: validateField }">
-                                </div>
+                                event: { blur: validateField }"
+                                       id="buckaroo_magento2_mrcash_expireDate"
+                                       name="payment[buckaroo_magento2_mrcash][expireDate]"
+                                       type="text">
                             </div>
                         </div>
+                    </div>
                     <div class="field">
-                        <span data-bind="i18n: 'Please make sure all fields are filled in correctly before proceeding.' ">  </span>
+                        <span
+                            data-bind="i18n: 'Please make sure all fields are filled in correctly before proceeding.' ">  </span>
                     </div>
                 </fieldset>
             </form>
             <!--/ko-->
 
-            <input id="buckaroo_magento2_mrcash_clientSideModeMobile" class="bank-types-input" type="radio"
-                   data-bind="checked: clientSideMode" value="mobile" name="payment[buckaroo_magento2_mrcash][clientsidemode]">
-            <label for="buckaroo_magento2_mrcash_clientSideModeMobile"><span data-bind="i18n: 'Bancontact QR'"></span></label>
+            <input class="bank-types-input" data-bind="checked: clientSideMode" id="buckaroo_magento2_mrcash_clientSideModeMobile"
+                   name="payment[buckaroo_magento2_mrcash][clientsidemode]" type="radio"
+                   value="mobile">
+            <label for="buckaroo_magento2_mrcash_clientSideModeMobile"><span
+                data-bind="i18n: 'Bancontact QR'"></span></label>
 
         </div>
 
@@ -115,16 +122,16 @@
 
         <div class="actions-toolbar">
             <div class="primary">
-                <button id="button-action-checkout-mrcash"
-                        class="action primary checkout"
-                        type="submit"
+                <button class="action primary checkout"
                         data-bind="
                         click: placeOrder,
                         attr: {title: $t('Place Order')},
                         enable: (getCode() == isChecked()),
                         css: {disabled: !isPlaceOrderActionAllowed() }
                         "
-                        disabled>
+                        disabled
+                        id="button-action-checkout-mrcash"
+                        type="submit">
                     <span data-bind="i18n: 'Place Order'"></span>
                 </button>
             </div>
