--- a/view/frontend/web/template/payment/buckaroo_magento2_paybybank.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_paybybank.html
@@ -2,19 +2,19 @@
     <div class="payment-method-title field choice bk-payment">
         <div class="bk-payment-wrap">
             <div class="bk-radio-wrap">
-                <input type="radio"
+                <input class="radio"
+                       data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()"
                        name="payment[method]"
-                       class="radio"
-                       data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()"/>
-                <label class="label" data-bind="attr: {'for': getCode()}" >
-                        <!-- ko text: getTitle() --><!-- /ko -->
-                        <!-- ko if: subtext !== null && subtext.length > 0 -->
-                       <p class="bk-description" data-bind="text: subtext, style: subTextStyle"></p>
-                        <!-- /ko -->
+                       type="radio">
+                <label class="label" data-bind="attr: {'for': getCode()}">
+                    <!-- ko text: getTitle() --><!-- /ko -->
+                    <!-- ko if: subtext !== null && subtext.length > 0 -->
+                    <p class="bk-description" data-bind="text: subtext, style: subTextStyle"></p>
+                    <!-- /ko -->
                 </label>
             </div>
             <div class="bk-img-wrap">
-                <img style="width:50px;" data-bind="attr: { src: logo() }" />
+                <img data-bind="attr: { src: logo() }" style="width:50px;">
             </div>
         </div>
     </div>
@@ -30,7 +30,7 @@
             <!--/ko-->
         </div>
 
-        <div class="payment-method-second-col billing-address-form" >
+        <div class="payment-method-second-col billing-address-form">
             <form data-bind="mageInit: { 'validation': [] },
                   attr: {'data-hasrequired': $t('* Required Fields')}">
                 <fieldset class="fieldset payment">
@@ -41,47 +41,46 @@
                             <div class="bk-paybybank-selector">
                                 <!-- ko foreach: bankTypes -->
                                 <div class="custom-control custom-radio bank-control">
-                                    <label class="bank-method-label" data-bind="class: $parent.selectedBank() === code ? 'bk-bank-selected': ''">
-                                    <input class="bank-method-input"
-                                            type="radio"
-                                            data-bind="value: code, checked: $parent.selectedBank,
-                                            event: { change: $parent.validateField.bind($parent) }"
-                                            data-validate="{'validate-one-required-by-name':true}"
-                                        >
+                                    <label class="bank-method-label"
+                                           data-bind="class: $parent.selectedBank() === code ? 'bk-bank-selected': ''">
+                                        <input class="bank-method-input"
+                                               data-bind="value: code, checked: $parent.selectedBank,
+                                               event: { change: $parent.validateField.bind($parent) }"
+                                               data-validate="{'validate-one-required-by-name':true}"
+                                               type="radio">
                                         <!-- ko if: img !== null -->
                                         <img data-bind="attr: {
                                                 'src': img,
                                                 'width': 40,
-                                                'height': 30 }"
-                                            />
-                                            <!--/ko-->
-                                            
+                                                'height': 30 }">
+                                        <!--/ko-->
                                         <strong><!-- ko text: name --><!--/ko--></strong>
                                     </label>
                                 </div>
                                 <!--/ko-->
                             </div>
                         </div>
-                            <div class="bk-paybybank-toggle-list" data-bind="click: toggleShow">
-                                <div class="bk-toggle-wrap">
-                                    <div class="bk-toggle-text" data-bind="i18n: showAll() ? 'Less banks' : 'More banks'">
-                                    </div>
-                                    <div class="bk-toggle" data-bind="class: showAll() ? 'bk-toggle-up' : 'bk-toggle-down'"></div>
+                        <div class="bk-paybybank-toggle-list" data-bind="click: toggleShow">
+                            <div class="bk-toggle-wrap">
+                                <div class="bk-toggle-text" data-bind="i18n: showAll() ? 'Less banks' : 'More banks'">
                                 </div>
+                                <div class="bk-toggle"
+                                     data-bind="class: showAll() ? 'bk-toggle-up' : 'bk-toggle-down'"></div>
                             </div>
+                        </div>
                         <!--/ko-->
 
                         <!-- ko if: selectionType == '2' || isMobile() -->
-                        <label for="buckaroo_magento2_ideal_issuer" data-bind="i18n: 'Select a bank:'"></label>
+                        <label data-bind="i18n: 'Select a bank:'" for="buckaroo_magento2_ideal_issuer"></label>
                         <div class="control">
-                            <select id="buckaroo_magento2_ideal_issuer" class="field"
-                                    data-bind="value: selectedBank,
+                            <select class="field" data-bind="value: selectedBank,
                                     attr: { 'data-validate': JSON.stringify({ 'required-entry': true }) },
                                     event: { change: validateField }"
+                                    id="buckaroo_magento2_ideal_issuer"
                                     name="buckaroo_magento2_ideal_issuer">
                                 <option data-bind="i18n: 'Select a bank', 'value': ''"></option>
                                 <!-- ko foreach: bankTypes -->
-                                    <option data-bind="i18n: name, 'value': code"></option>
+                                <option data-bind="i18n: name, 'value': code"></option>
                                 <!--/ko-->
                             </select>
                         </div>
@@ -99,16 +98,16 @@
 
         <div class="actions-toolbar">
             <div class="primary">
-                <button id="button-action-checkout-paybybank"
-                        class="action primary checkout"
-                        type="submit"
+                <button class="action primary checkout"
                         data-bind="
                         click: placeOrder,
                         attr: {title: $t('Place Order')},
                         enable: (getCode() == isChecked()),
                         css: {disabled: !isPlaceOrderActionAllowed() || !buttoncheck() }
                         "
-                        disabled>
+                        disabled
+                        id="button-action-checkout-paybybank"
+                        type="submit">
                     <span data-bind="i18n: 'Place Order'"></span>
                 </button>
             </div>
