--- a/view/frontend/web/template/payment/buckaroo_magento2_payperemail.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_payperemail.html
@@ -2,19 +2,20 @@
     <div class="payment-method-title field choice bk-payment">
         <div class="bk-payment-wrap">
             <div class="bk-radio-wrap">
-                <input type="radio"
+                <input class="radio"
+                       data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()"
                        name="payment[method]"
-                       class="radio"
-                       data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()"/>
-                <label class="label" data-bind="attr: {'for': getCode()}" >
-                        <!-- ko text: getTitle() --><!-- /ko -->
-                        <!-- ko if: subtext !== null && subtext.length > 0 -->
-                       <p class="bk-description" data-bind="text: subtext, style: subTextStyle"></p>
-                        <!-- /ko -->
+                       type="radio">
+                <label class="label" data-bind="attr: {'for': getCode()}">
+                    <!-- ko text: getTitle() --><!-- /ko -->
+                    <!-- ko if: subtext !== null && subtext.length > 0 -->
+                    <p class="bk-description" data-bind="text: subtext, style: subTextStyle"></p>
+                    <!-- /ko -->
                 </label>
             </div>
             <div class="bk-img-wrap">
-                <img data-bind="attr: { src: require.toUrl('Buckaroo_Magento2/images/svg/'+getCode().replace('buckaroo_magento2_','')+'.svg') }" />
+                <img
+                    data-bind="attr: { src: require.toUrl('Buckaroo_Magento2/images/svg/'+getCode().replace('buckaroo_magento2_','')+'.svg') }">
             </div>
         </div>
     </div>
@@ -36,84 +37,91 @@
                 <fieldset class="fieldset payment">
 
                     <div class="field required">
-                        <label class="label" for="buckaroo_magento2_payperemail_genderSelect"> <span data-bind="i18n: 'Salutation:'"> </span> </label>
+                        <label class="label" for="buckaroo_magento2_payperemail_genderSelect"> <span
+                            data-bind="i18n: 'Salutation:'"> </span> </label>
                         <div class="control">
-                            <select id="buckaroo_magento2_payperemail_genderSelect" name="payment[buckaroo_magento2_payperemail[customer_gender]" class="field"
-                                data-bind="options: genderList,
+                            <select class="field"
+                                    class="select" data-bind="options: genderList,
                                     optionsText: $t('genderTitle'),
                                     optionsValue: 'genderType',
                                     optionsCaption: $t('-- Please Select Your Gender--'),
                                     value: selectedGender,
                                     attr: { 'data-validate': JSON.stringify({ 'required': true }) },
-                                    event: { blur: validateField }" class="select">
+                                    event: { blur: validateField }"
+                                    id="buckaroo_magento2_payperemail_genderSelect" name="payment[buckaroo_magento2_payperemail[customer_gender]">
                             </select>
                         </div>
                     </div>
 
                     <div class="field required">
-                        <label class="label" for="buckaroo_magento2_payperemail_BillingFirstName"> <span data-bind="i18n: 'Billing First Name:'"> </span> </label>
+                        <label class="label" for="buckaroo_magento2_payperemail_BillingFirstName"> <span
+                            data-bind="i18n: 'Billing First Name:'"> </span> </label>
                         <div class="control">
-                            <input id="buckaroo_magento2_payperemail_BillingFirstName"
-                                   class="input-text field"
-                                   type="text"
-                                   placeholder="John"
+                            <input class="input-text field"
                                    data-bind="
                                        valueUpdate: 'keyup',
                                        value: firstName,
                                        attr: { 'data-validate': JSON.stringify({ 'required': true }) },
                                        event: { blur: validateField }"
+                                   id="buckaroo_magento2_payperemail_BillingFirstName"
                                    name="payment[buckaroo_magento2_payperemail][customer_billingFirstName]"
-                                   >
+                                   placeholder="John"
+                                   type="text"
+                            >
                         </div>
                     </div>
 
                     <div class="field">
-                        <label class="label" for="buckaroo_magento2_payperemail_BillingMiddleName"> <span data-bind="i18n: 'Billing Middle Name:'"> </span> </label>
+                        <label class="label" for="buckaroo_magento2_payperemail_BillingMiddleName"> <span
+                            data-bind="i18n: 'Billing Middle Name:'"> </span> </label>
                         <div class="control">
-                            <input id="buckaroo_magento2_payperemail_BillingMiddleName"
-                                   class="input-text field"
-                                   type="text"
+                            <input class="input-text field"
                                    data-bind="
                                        valueUpdate: 'keyup',
                                        value: middleName"
+                                   id="buckaroo_magento2_payperemail_BillingMiddleName"
                                    name="payment[buckaroo_magento2_payperemail][customer_billingMiddleName]"
-                                   >
+                                   type="text"
+                            >
                         </div>
                     </div>
                     <div class="field required">
-                        <label class="label" for="buckaroo_magento2_payperemail_BillingLastName"> <span data-bind="i18n: 'Billing Last Name:'"> </span> </label>
+                        <label class="label" for="buckaroo_magento2_payperemail_BillingLastName"> <span
+                            data-bind="i18n: 'Billing Last Name:'"> </span> </label>
                         <div class="control">
-                            <input id="buckaroo_magento2_payperemail_BillingLastName"
-                                   class="input-text field"
-                                   type="text"
-                                   placeholder="Doe"
+                            <input class="input-text field"
                                    data-bind="
                                        valueUpdate: 'keyup',
                                        value: lastName,
                                        attr: { 'data-validate': JSON.stringify({ 'required': true }) },
                                        event: { blur: validateField }"
+                                   id="buckaroo_magento2_payperemail_BillingLastName"
                                    name="payment[buckaroo_magento2_payperemail][customer_billingLastName]"
+                                   placeholder="Doe"
+                                   type="text"
                             >
                         </div>
                     </div>
-                    <div class="field required" >
-                        <label class="label" for="buckaroo_magento2_payperemail_Email"> <span data-bind="i18n: 'Email:'"> </span> </label>
+                    <div class="field required">
+                        <label class="label" for="buckaroo_magento2_payperemail_Email"> <span
+                            data-bind="i18n: 'Email:'"> </span> </label>
                         <div class="control">
-                            <input id="buckaroo_magento2_payperemail_Email"
-                                   type="text"
-                                   class="input-text field"
-                                   placeholder="email@example.com"
+                            <input class="input-text field"
                                    data-bind="
                                        valueUpdate: 'keyup',
                                        value: email,
                                        attr: { 'data-validate': JSON.stringify({ 'required': true, 'validate-email': true })},
                                        event: { blur: validateField }"
-                                   name="payment[buckaroo_magento2_payperemail][customer_email]">
+                                   id="buckaroo_magento2_payperemail_Email"
+                                   name="payment[buckaroo_magento2_payperemail][customer_email]"
+                                   placeholder="email@example.com"
+                                   type="text">
                         </div>
                     </div>
 
                     <div class="field">
-                        <span data-bind="i18n: 'Please make sure all fields are filled in correctly before proceeding.' ">  </span>
+                        <span
+                            data-bind="i18n: 'Please make sure all fields are filled in correctly before proceeding.' ">  </span>
                     </div>
                 </fieldset>
             </form>
@@ -121,16 +129,16 @@
 
         <div class="actions-toolbar">
             <div class="primary">
-                <button id="button-action-checkout-payperemail"
-                        class="action primary checkout"
-                        type="submit"
+                <button class="action primary checkout"
                         data-bind="
                         click: placeOrder,
                         attr: {title: $t('Place Order')},
                         enable: (getCode() == isChecked()),
                         css: {disabled: !isPlaceOrderActionAllowed() || !buttoncheck() }
                         "
-                        disabled>
+                        disabled
+                        id="button-action-checkout-payperemail"
+                        type="submit">
                     <span data-bind="i18n: 'Place Order'"></span>
                 </button>
             </div>
