--- a/view/frontend/web/template/payment/buckaroo_magento2_voucher.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_voucher.html
@@ -2,84 +2,85 @@
     <div class="payment-method-title field choice bk-payment">
         <div class="bk-payment-wrap">
             <div class="bk-radio-wrap">
-                <input type="radio"
+                <input class="radio"
+                       data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()"
                        name="payment[method]"
-                       class="radio"
-                       data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()"/>
-                <label class="label" data-bind="attr: {'for': getCode()}" >
-                        <!-- ko text: getTitle() --><!-- /ko -->
-                        <!-- ko if: subtext !== null && subtext.length > 0 -->
-                       <p class="bk-description" data-bind="text: subtext, style: subTextStyle"></p>
-                        <!-- /ko -->
+                       type="radio">
+                <label class="label" data-bind="attr: {'for': getCode()}">
+                    <!-- ko text: getTitle() --><!-- /ko -->
+                    <!-- ko if: subtext !== null && subtext.length > 0 -->
+                    <p class="bk-description" data-bind="text: subtext, style: subTextStyle"></p>
+                    <!-- /ko -->
                 </label>
             </div>
             <div class="bk-img-wrap">
-                <img data-bind="attr: { src: require.toUrl('Buckaroo_Magento2/images/svg/vouchers.svg') }" />
+                <img data-bind="attr: { src: require.toUrl('Buckaroo_Magento2/images/svg/vouchers.svg') }">
             </div>
         </div>
 
-    <div class="payment-method-content">
-        <div class="payment-method-billing-address">
-            <!-- ko foreach: $parent.getRegion(getBillingAddressFormName()) -->
-            <!-- ko template: getTemplate() -->
-            <!-- /ko -->
-            <!--/ko-->
-        </div>
+        <div class="payment-method-content">
+            <div class="payment-method-billing-address">
+                <!-- ko foreach: $parent.getRegion(getBillingAddressFormName()) -->
+                <!-- ko template: getTemplate() -->
+                <!-- /ko -->
+                <!--/ko-->
+            </div>
 
-        <div class="payment-method-second-col billing-address-form">
-            <form data-bind="mageInit: { 'validation': [] },
+            <div class="payment-method-second-col billing-address-form">
+                <form data-bind="mageInit: { 'validation': [] },
                   attr: {'data-hasrequired': $t('* Required Fields')}">
-                <fieldset class="fieldset payment">
-                    <div class="field required b2b-fields">
-                        <label class="label" for="buckaroo_magento2_voucher_code"> <span
+                    <fieldset class="fieldset payment">
+                        <div class="field required b2b-fields">
+                            <label class="label" for="buckaroo_magento2_voucher_code"> <span
                                 data-bind="i18n: 'Voucher code:'"> </span> </label>
-                        <div class="control">
-                            <input id="buckaroo_magento2_voucher_code"
-                                name="payment[buckaroo_magento2_voucher][code]"
-                                class="input-text field"
-                                type="text"
-                                placeholder="1A2B-3C4D-6E7F-8G9H-1I2J"
-                                data-bind="
+                            <div class="control">
+                                <input class="input-text field"
+                                       data-bind="
                                        valueUpdate: 'keyup',
                                        value: code,
                                        attr: { 'data-validate': JSON.stringify({ 'required': true })
-                                        }">
+                                        }"
+                                       id="buckaroo_magento2_voucher_code"
+                                       name="payment[buckaroo_magento2_voucher][code]"
+                                       placeholder="1A2B-3C4D-6E7F-8G9H-1I2J"
+                                       type="text">
+                            </div>
                         </div>
-                    </div>
 
-                </fieldset>
-            </form>
-        </div>
-        <div class="actions-toolbar">
-            <div class="primary">
-                <button id="button-action-checkout-voucher" class="action primary checkout" type="submit" data-bind="
+                    </fieldset>
+                </form>
+            </div>
+            <div class="actions-toolbar">
+                <div class="primary">
+                    <button class="action primary checkout" data-bind="
                         click: applyVoucher,
                         attr: {title: $t('Apply Voucher')},
                         enable:  isFormValid ,
                         css: {disabled: !isFormValid }
-                        " disabled>
-                    <span data-bind="i18n: 'Apply Voucher'"></span>
-                </button>
+                        " disabled
+                            id="button-action-checkout-voucher" type="submit">
+                        <span data-bind="i18n: 'Apply Voucher'"></span>
+                    </button>
+                </div>
             </div>
-        </div>
 
-        <!-- ko if: payWithBaseCurrency() -->
-        <div class="buckaroo_magento2_currency-notification">
-            <span data-bind="text: getPayWithBaseCurrencyText()"></span>
-        </div>
-        <!--/ko-->
+            <!-- ko if: payWithBaseCurrency() -->
+            <div class="buckaroo_magento2_currency-notification">
+                <span data-bind="text: getPayWithBaseCurrencyText()"></span>
+            </div>
+            <!--/ko-->
 
-        <!-- ko foreach: getRegion('messages') -->
-        <!-- ko template: getTemplate() -->
-        <!-- /ko -->
-        <!--/ko-->
-
-        <div class="checkout-agreements-block">
-            <!-- ko foreach: $parent.getRegion('before-place-order') -->
+            <!-- ko foreach: getRegion('messages') -->
             <!-- ko template: getTemplate() -->
             <!-- /ko -->
             <!--/ko-->
-        </div>
 
+            <div class="checkout-agreements-block">
+                <!-- ko foreach: $parent.getRegion('before-place-order') -->
+                <!-- ko template: getTemplate() -->
+                <!-- /ko -->
+                <!--/ko-->
+            </div>
+
+        </div>
     </div>
-</div>
