--- a/view/frontend/layout/checkout_onepage_success.xml
+++ b/view/frontend/layout/checkout_onepage_success.xml
@@ -22,8 +22,11 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceContainer name="content">
-            <block class="Buckaroo\Magento2\Block\Checkout\Success" name="order.details.success" template="Buckaroo_Magento2::checkout/success.phtml" after="-">           
+            <block class="Buckaroo\Magento2\Block\Checkout\Success" name="order.details.success" template="Buckaroo_Magento2::checkout/success.phtml" after="-">
             </block>
         </referenceContainer>
+        <referenceBlock name="checkout.success">
+            <block class="Buckaroo\Magento2\Block\Checkout\Success" name="buckaroo.transfer.instructions" template="Buckaroo_Magento2::checkout/success.phtml" before="-"/>
+        </referenceBlock>
     </body>
 </page>
