--- a/view/frontend/email/buckaroo_second_chance_first.html
+++ b/view/frontend/email/buckaroo_second_chance_first.html
@@ -23,6 +23,7 @@
 "var billing_address|raw":"Billing Address",
 "var shipping_address|raw":"Shipping Address",
 "var order.increment_id":"Order Id",
+"var expected_order_id":"Expected Order Id",
 "var payment_html|raw":"Payment Details",
 "var checkout_url":"Checkout URL",
 "var customer_name":"Customer Name",
@@ -48,7 +49,7 @@
     </tr>
     <tr class="email-summary">
         <td>
-            <h1>{{trans 'Your Order <span class="no-link">#%increment_id</span>' increment_id=$order.increment_id |raw}}</h1>
+            <h1>{{trans 'Your Order <span class="no-link">#%increment_id</span>' increment_id=$expected_order_id |raw}}</h1>
             <p>{{trans 'Order Total: %order_total' order_total=$order.formatPrice($order.getGrandTotal()) |raw}}</p>
         </td>
     </tr>
