fix: add support for refunding single giftcard payments and improve giftcard display in order and invoice views

--- a/view/adminhtml/layout/sales_order_invoice_view.xml
+++ b/view/adminhtml/layout/sales_order_invoice_view.xml
@@ -27,6 +27,7 @@
     <body>
         <referenceBlock name="invoice_totals">
             <block class="Buckaroo\Magento2\Block\Adminhtml\Sales\Totals" name="buckaroo_fee_totals"/>
+            <block class="Buckaroo\Magento2\Block\Adminhtml\Sales\Order\GiftcardTotals" name="buckaroo_giftcard_totals"/>
         </referenceBlock>
     </body>
 </page>
